# ghostly

./: .gitignore  CHANGELOG.md  README.md  environment.yaml  pixi.toml  pyproject.toml
.github/workflows/: devel.yaml  main.yaml  pr.yaml
actions/: update_recipe.py  upload_package.py
examples/: README.md  environment.yaml
examples/scripts/: angles.py  plot.py
recipes/ghostly/: recipe.yaml  template.yaml
src/ghostly/: __init__.py  _cli.py  _ghostly.py
tests/: test_ghostly.py
