[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "ghostly"
authors = [
    { name = "Lester Hedges", email = "lester@openbiosim.org" },
]
description = "Ghost atom bonded modifications for alchemical free energy simulations"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "GPL-3.0-or-later"}
dynamic = ["version"]

[tool.setuptools]
license-files = ["LICENSE"]

[project.scripts]
ghostly = "ghostly._cli:run"

[project.urls]
repository = "https://github.com/OpenBioSim/ghostly"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
write_to = "src/ghostly/_version.py"
